--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,4 +1,11 @@
 <h1>Liste des appartements</h1>
+
+<%# nouveau flat %>
+<div>
+  <%= link_to 'Create New Flat', new_flat_path, class: "btn btn-success" %>
+</div>
+
+<%# index flats %>
 <% @flats.each do |flat| %>
   <div>
     <h2><%= link_to flat.name, flat_path(flat) %></h2>
